--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tamagui/config": "^1.127.3",
+    "@tamagui/core": "^1.127.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "expo": "~53.0.12",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -36,14 +39,19 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tamagui": "^1.127.3",
+    "tslib": "^2.8.1",
+    "expo-asset": "~11.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tamagui/babel-plugin": "^1.127.3",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
