--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@get-id/react-native-fast-tflite": "^1.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tamagui/config": "^1.127.3",
     "@tamagui/core": "^1.127.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
+    "base-64": "^1.0.0",
     "expo": "~53.0.12",
+    "expo-asset": "~11.1.5",
     "expo-blur": "~14.1.5",
+    "expo-camera": "^16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -34,6 +38,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-fast-tflite": "^1.6.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -42,11 +47,13 @@
     "react-native-webview": "13.13.5",
     "tamagui": "^1.127.3",
     "tslib": "^2.8.1",
-    "expo-asset": "~11.1.5"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tamagui/babel-plugin": "^1.127.3",
+    "@types/base-64": "^1.0.2",
     "@types/react": "~19.0.10",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^9.25.0",
