--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tamagui/core": "^1.127.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "base-64": "^1.0.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.12",
     "expo-asset": "~11.1.5",
     "expo-blur": "~14.1.5",
@@ -40,12 +41,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-fast-tflite": "^1.6.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tamagui": "^1.127.3",
