--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "dayjs": "^1.11.13",
     "expo": "~53.0.12",
     "expo-asset": "~11.1.5",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
-    "expo-camera": "^16.1.8",
+    "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -38,6 +39,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "qs": "^6.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
@@ -54,12 +56,14 @@
     "tamagui": "^1.127.3",
     "tslib": "^2.8.1",
     "uuid": "^11.1.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "expo-dev-client": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tamagui/babel-plugin": "^1.127.3",
     "@types/base-64": "^1.0.2",
+    "@types/qs": "^6.14.0",
     "@types/react": "~19.0.10",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^9.25.0",
